--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Web application for rolling exploratory data analysis of time-serie
 License: GPL (>= 2)
 URL: https://github.com/jasonjfoster/rolleda
 BugReports: https://github.com/jasonjfoster/rolleda/issues
-Imports: shiny, shinythemes, dygraphs, nycflights13, data.table, zoo, roll, scales, grDevices
+Imports: shiny, bslib, dygraphs, nycflights13, data.table, zoo, roll, scales, grDevices
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Encoding: UTF-8
