--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,3 @@
 export(roll_eda)
-importFrom(data.table, ":=")
-importFrom(data.table, .SD)
+importFrom(data.table, ":=", .SD)
 importFrom(grDevices, rgb)
